    Bug fixed: Fixed possible XSS hole. Name and email checking now
    done when adding issues and followups.
    
    Bug fixed: Emails in unicode (non-ascii) characters could lead to
    email notifications being sent out incorrectly.

    New feature: The autorefresh interval starts on 3 seconds interval
    and increases the interval length by 30% each time it incurs.
    http://www.issuetrackerproduct.com/News/autorefresh-intervals/

    Bug fixed: multiple drafts were created sometimes.

    New feature: fromname, title and description of issues and
    followups are now stored as unicode! The default encoding is utf8.
    
    New feature: If you run Python 2.4 on your Zope you can configure
    the POP3 to use SSL. Thanks Shane Graber

    New feature: Possible to disable the 'Tell a friend' feature for
    anonymous users (eg. spambots for example). Thanks Fred Damberger
    
- 0.7.3

    Bug fixed: .svn and CVS folders could be created when you Update
    Everything.

    New feature: New version of addhrefs.py version 0.9.2.

    New feature: QuickAddIssue now shows the spambot prevention if
    switched on. Real#0343
    
    Bug fixed: Redirecting out on duplicate status change would cause
    a TypeError. This happens when two people simultaneuously for
    example Take an issue. 
    
    Bug fixed: Change user details didn't work when you're not logged
    in as a CMF user.
    
    Bug fixed: ShowIssueData template mixed up ShowIssueURLOption with
    ShowConfidentialOption. Thanks Peter Eddy. Real#0332
    
    Bug fixed: Edit notifyable error. Real#0320
    
    New feature: Ability to enable a spambot prevention technique to
    assert that posters are humans. 
    (see Properties->Advanced->Enable spambot prevention)
    
    Bug fixed: When using IssueTrackerProduct on top of Plone the
    authenticated member was selected incorrectly. Thanks Greg Baker
    (Real#0315)
    
    Bug fixed: get_cookie() typo should have been self.get_cookie().